--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
             <section>
                 <h2>HTML Form</h2>
-                <form class="" action="" method="post" id="studentForm">
+                <form class="" action="./src/html/thank-you.html" method="post" id="studentForm">
 
                     <div class="flex form-elements">
                     <label for="firstname">Firstname:</label>
@@ -53,7 +53,7 @@
                     <div class="flex form-elements">
                     <label for="password">Password:</label>
                         <div class="flex" id="form-password">
-                            <input type="password" id="password" name="password" required>
+                                <input type="password" id="password" name="password" required>
                             <button type="button" id="togglePassword">Show</button>
                         </div>
                     </div>
