'edited css for error messages'

--- a/src/html/thank-you.html
+++ b/src/html/thank-you.html
@@ -15,17 +15,18 @@
 </head>
 
 <body>
-        <div class="wrapper-body">
-            <header class="primary-header flex">
-                <h2>Assignment 06</h2>
-            </header>
+     <div class="wrapper-body">
+        <header class="primary-header flex">
+            <h2>Assignment 06</h2>
+        </header>
 
-            <main>
+        <main>
             <section>
                 <h1>Thank You! The form you submitted contains valid data!</h1>
                 <p>Please click here to be redirected at the main page</p>
                 <button id="goBackBtn" class="btn-main">Go back to Main Page</button>
             </section>
-        </div>
-    </main>
+        </main>
+    </div>
 </body>
+</html>
